--- a/package.json
+++ b/package.json
@@ -40,17 +40,18 @@
     "rglikes": "node ./_scripts/researchgatesLikes.js",
     "tweets": "node ./_scripts/send-tweets.js",
     "sprite": "node ./_scripts/generate-svg-sprite.js",
+    "plum": "node ./_scripts/plum.js",
     "bib": "(cd BIB; ./updatebib.sh)",
     "update": "npm-run-all start0 bib sprite webmention",
-    "updateall": "npm-run-all start0 bib sprite webmention rglikes likes"
+    "updateall": "npm-run-all start0 bib sprite webmention plum start0  rglikes likes  start0"
   },
   "devDependencies": {
     "@11ty/eleventy": "0.12.1",
     "@11ty/eleventy-navigation": "^0.2.0",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.0",
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.14.1",
+    "@babel/core": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
     "@rollup/plugin-babel": "^5.3",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
@@ -60,7 +61,7 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "bent": "^7.3.12",
-    "citation-js": "^0.5.0",
+    "citation-js": "^0.5.1",
     "core-js": "^3.12",
     "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
@@ -76,7 +77,6 @@
     "eleventy-plugin-nesting-toc": "github:mmontevil/eleventy-plugin-nesting-toc",
     "eleventy-plugin-reading-time": "^0.0.1",
     "eleventy-plugin-youtube-embed": "1.6.2",
-    "eleventy-plugins": "github:mmontevil/eleventy-plugins",
     "encoding": "^0.1.13",
     "entities": "^2.2.0",
     "fast-glob": "^3.2.5",
@@ -85,7 +85,7 @@
     "flat-cache": "^3.0.4",
     "html-minifier": "^4.0.0",
     "image-size": "^1.0.0",
-    "linkedom": "^0.7.6",
+    "linkedom": "^0.8.0",
     "linkify-urls": "^3.1.1",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
@@ -111,13 +111,13 @@
     "request": "^2.88.2",
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.47.0",
+    "rollup": "^2.48.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "~5.5.0",
     "sanitize-html": "^2.3.3",
-    "sass": "~1.32.12",
+    "sass": "~1.32.13",
     "simple-icons": "~4.23.0",
     "svgstore": "^3.0.0-2",
     "to-vfile": "^7.0.0",
