--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "core-js": "^3.12",
     "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
-    "cssnano": "^5.0.3",
+    "cssnano": "5.0.1",
     "debug": "^4.3.1",
     "deepmerge": "^4.2.2",
     "dotenv": "^9.0.2",
@@ -96,7 +96,7 @@
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^3.0.0",
-    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-footnote": "^3.0.3",
     "mathjax-full": "3.1.4",
     "modern-css-reset": "^1.4.0",
     "moment": "^2.29.1",
@@ -117,8 +117,8 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "~5.5.0",
-    "sanitize-html": "^2.3.3",
-    "sass": "~1.32.13",
+    "sanitize-html": "^2.4.0",
+    "sass": "~1.33.0",
     "simple-icons": "~4.24.0",
     "svgstore": "^3.0.0-2",
     "to-vfile": "^7.0.0",
