--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@11ty/eleventy-navigation": "^0.2.0",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
-    "@babel/core": "^7.14.5",
+    "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@rollup/plugin-babel": "^5.3",
     "@rollup/plugin-commonjs": "^19.0.0",
@@ -90,7 +90,7 @@
     "lodash.clonedeep": "^4.5.0",
     "markdown-it": "~12.0",
     "markdown-it-abbr": "^1.0.4",
-    "markdown-it-anchor": "^7.1",
+    "markdown-it-anchor": "7.1.0",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^3.0.0",
@@ -110,14 +110,14 @@
     "request": "^2.88.2",
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.51.2",
+    "rollup": "^2.52.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "~5.5.0",
     "sanitize-html": "^2.4.0",
-    "sass": "~1.34.1",
-    "simple-icons": "~5.1.0",
+    "sass": "~1.35.1",
+    "simple-icons": "~5.2.0",
     "svgstore": "^3.0.0-2",
     "to-vfile": "^7.1.0",
     "truncate-html": "^1.0.3",
