--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "updateall": "npm-run-all start0 bib sprite webmention plum start0  rglikes likes  start0"
   },
   "devDependencies": {
-    "@11ty/eleventy": "0.12.1",
-    "@11ty/eleventy-navigation": "^0.2.0",
+    "@11ty/eleventy": "github:11ty/eleventy",
+    "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
     "@babel/core": "^7.14.6",
@@ -95,7 +95,7 @@
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^3.0.0",
     "markdown-it-footnote": "^3.0.3",
-    "mathjax-full": "3.1.4",
+    "mathjax-full": "3.2.0",
     "modern-css-reset": "^1.4.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
@@ -110,7 +110,7 @@
     "request": "^2.88.2",
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.52.0",
+    "rollup": "^2.52.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^7.0.2",
@@ -143,7 +143,7 @@
     "cheerio": "*",
     "clean-css": "^5.1.2",
     "eleventy-plugin-toc": "^1.1.0",
-    "eslint": "7.28.0",
+    "eslint": "7.29.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "esm": "^3.2.25",
