--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "build:eleventy": "NODE_OPTIONS='-r esm' eleventy",
     "watch:eleventy": "NODE_OPTIONS='-r esm' eleventy --serve",
     "serviceworker:inject": "workbox generateSW workbox.config.js",
-    "start": "cross-env NODE_ENV=development npm-run-all --sequential clean build:js --parallel watch:*",
-    "start0": "cross-env NODE_ENV=development npm-run-all --sequential clean --parallel build:js build:sass --sequential build:eleventy ",
-    "startsup": "cross-env NODE_ENV=production npm-run-all  --sequential clean --parallel build:js build:sass serviceworker:inject --parallel watch:*",
+    "start": " NODE_ENV=development npm-run-all --sequential clean build:js --parallel watch:*",
+    "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel build:js build:sass --sequential build:eleventy ",
+    "startsup": " NODE_ENV=production npm-run-all  --sequential clean --parallel build:js build:sass serviceworker:inject --parallel watch:*",
     "start:debug": "DEBUG=Eleventy* npm start",
-    "build": "cross-env NODE_ENV=production npm-run-all --sequential clean --parallel build:js build:sass --sequential build:eleventy serviceworker:inject",
+    "build": " NODE_ENV=production npm-run-all --sequential clean --parallel build:js build:sass --sequential build:eleventy serviceworker:inject",
     "build:debug": "DEBUG=Eleventy* npm run build",
     "build:benchmark": "DEBUG=Eleventy:Benchmark* npm run build",
-    "build:netlify": "cross-env NODE_ENV=production npm-run-all --sequential clean --parallel build:js build:sass --sequential build:eleventy serviceworker:inject",
+    "build:netlify": " NODE_ENV=production npm-run-all --sequential clean --parallel build:js build:sass --sequential build:eleventy serviceworker:inject",
     "webmention": "node ./_scripts/update-webmention.js",
     "likes": "node ./_scripts/twitterLikes.js",
     "rglikes": "node ./_scripts/researchgatesLikes.js",
@@ -55,15 +55,13 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
-    "@sindresorhus/slugify": "1.1.0",
+    "slugify": "1.5.3",
     "approx-string-match": "^1.1.0",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "bent": "^7.3.12",
     "citation-js": "^0.5.1",
     "core-js": "^3.14",
-    "cross-env": "^7.0.3",
-    "cross-spawn": "^7.0.3",
     "cssnano": "5.0.6",
     "debug": "^4.3.1",
     "deepmerge": "^4.2.2",
