--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
-    "slugify": "1.5.3",
+    "@sindresorhus/slugify": "1.1.0",
     "approx-string-match": "^1.1.0",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
