--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "people": "node ./_scripts/updateAuthors.js",
     "bib": "(cd BIB; ./updatebib.sh)",
     "update": "npm-run-all start0 bib sprite webmention",
-    "updateall": "npm-run-all start0 bib sprite webmention plum start0  rglikes likes  start0"
+    "updateall": "npm-run-all start0 bib sprite webmention plum start0  rglikes likes  start0",
+    "lint:sass": "stylelint 'assets/**/*.scss'",
+    "fix:sass": "stylelint --fix 'assets/**/*.scss'"
   },
   "devDependencies": {
     "@11ty/eleventy": "github:11ty/eleventy",
@@ -82,7 +84,7 @@
     "flat-cache": "^3.0.4",
     "html-minifier": "^4.0.0",
     "image-size": "^1.0.0",
-    "linkedom": "^0.9.6",
+    "linkedom": "^0.9.7",
     "linkify-urls": "^3.1.1",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
@@ -104,6 +106,7 @@
     "postcss-hash": "^3.0.0",
     "postcss-var-optimize": "^0.0.4",
     "prettier": "^2.3.2",
+    "prettier-stylelint": "~0.4.2",
     "replaceall": "^0.1.6",
     "request": "^2.88.2",
     "require-dir": "^1.2.0",
@@ -116,6 +119,13 @@
     "sanitize-html": "^2.4.0",
     "sass": "~1.35.1",
     "simple-icons": "~5.4.0",
+        "stylelint": "~13.13.1",
+    "stylelint-config-idiomatic-order": "~8.1.0",
+    "stylelint-config-prettier": "~8.0.2",
+    "stylelint-config-sass-guidelines": "~8.0.0",
+    "stylelint-config-standard": "~22.0.0",
+    "stylelint-order": "~4.1.0",
+    "stylelint-semantic-groups": "~1.0.0",
     "svgstore": "^3.0.0-2",
     "to-vfile": "^7.1.0",
     "truncate-html": "^1.0.3",
