--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "fix:sass": "stylelint --fix 'assets/**/*.scss'"
   },
   "devDependencies": {
-    "@11ty/eleventy": "github:11ty/eleventy",
+    "@11ty/eleventy": "^1.0.0-canary.38",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
@@ -119,7 +119,7 @@
     "sanitize-html": "^2.4.0",
     "sass": "~1.35.1",
     "simple-icons": "~5.4.0",
-        "stylelint": "~13.13.1",
+    "stylelint": "~13.13.1",
     "stylelint-config-idiomatic-order": "~8.1.0",
     "stylelint-config-prettier": "~8.0.2",
     "stylelint-config-sass-guidelines": "~8.0.0",
