--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "update": "npm-run-all start0 bib sprite webmention",
     "updateall": "npm-run-all start0 bib sprite webmention plum start0  rglikes likes  start0",
     "lint:sass": "stylelint 'assets/**/*.scss'",
-    "fix:sass": "stylelint --fix 'assets/**/*.scss'"
+    "fix:sass": "stylelint --fix 'assets/**/*.scss'",
+    "check-links": "npx check-html-links _site"
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0-canary.43",
@@ -63,7 +64,7 @@
     "babel-loader": "^8.2.2",
     "bent": "^7.3.12",
     "citation-js": "^0.5.1",
-    "core-js": "^3.17",
+    "core-js": "^3.18",
     "cssnano": "5.0.8",
     "debug": "^4.3.2",
     "deepmerge": "^4.2.2",
@@ -90,7 +91,7 @@
     "lodash.clonedeep": "^4.5.0",
     "markdown-it": "~12.2",
     "markdown-it-abbr": "^1.0.4",
-    "markdown-it-anchor": "8.3.0",
+    "markdown-it-anchor": "8.3.1",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^3.0.0",
@@ -105,7 +106,7 @@
     "postcss-cli": "^8.3.1",
     "postcss-hash": "^3.0.0",
     "postcss-var-optimize": "^0.0.4",
-    "prettier": "^2.4.0",
+    "prettier": "^2.4.1",
     "prettier-stylelint": "~0.4.2",
     "replaceall": "^0.1.6",
     "request": "^2.88.2",
@@ -116,9 +117,9 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "~5.5.2",
-    "sanitize-html": "^2.5.0",
-    "sass": "~1.39.2",
-    "simple-icons": "~5.14.0",
+    "sanitize-html": "^2.5.1",
+    "sass": "~1.41.1",
+    "simple-icons": "~5.15.0",
     "stylelint": "~13.13.1",
     "stylelint-config-idiomatic-order": "~8.1.0",
     "stylelint-config-prettier": "~8.0.2",
@@ -148,6 +149,7 @@
   "private": true,
   "dependencies": {
     "bib2json": "^0.0.1",
+    "check-html-links": "^0.2.3",
     "cheerio": "*",
     "clean-css": "^5.1.5",
     "eleventy-plugin-toc": "^1.1.0",
