--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^3.0.0",
     "markdown-it-footnote": "^3.0.3",
+    "markdown-it-plain-text": "^0.2.1",
     "mathjax-full": "3.2.0",
     "modern-css-reset": "^1.4.0",
     "moment": "^2.29.1",
