--- a/package.json
+++ b/package.json
@@ -48,19 +48,19 @@
     "check-links": "npx check-html-links _site"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0-canary.43",
+    "@11ty/eleventy": "1.0.0-beta.1",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@rollup/plugin-babel": "^5.3",
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-replace": "^3.0.0",
     "@sindresorhus/slugify": "1.1.0",
     "approx-string-match": "^1.1.0",
-    "autoprefixer": "^10.3.6",
+    "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "bent": "^7.3.12",
     "citation-js": "^0.5.1",
@@ -120,7 +120,7 @@
     "rollup-plugin-visualizer": "~5.5.2",
     "sanitize-html": "^2.5.1",
     "sass": "~1.42.1",
-    "simple-icons": "~5.16.0",
+    "simple-icons": "~5.17.0",
     "stylelint": "~13.13.1",
     "stylelint-config-idiomatic-order": "~8.1.0",
     "stylelint-config-prettier": "~8.0.2",
