--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "check-links": "npx check-html-links _site"
   },
   "devDependencies": {
-    "@11ty/eleventy": "1.0.0-beta.3",
+    "@11ty/eleventy": "1.0.0-beta.5",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
@@ -65,7 +65,7 @@
     "bent": "^7.3.12",
     "citation-js": "^0.5.1",
     "core-js": "^3.19",
-    "cssnano": "5.0.8",
+    "cssnano": "5.0.10",
     "debug": "^4.3.2",
     "deepmerge": "^4.2.2",
     "dotenv": "^10.0.0",
@@ -100,11 +100,11 @@
     "mathjax-full": "3.2.0",
     "modern-css-reset": "^1.4.0",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
-    "node-fetch": "^3.0.0",
+    "moment-timezone": "^0.5.34",
+    "node-fetch": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "postcss-cli": "^9.0.1",
+    "postcss-cli": "^9.0.2",
     "postcss-hash": "^3.0.0",
     "postcss-var-optimize": "^0.0.4",
     "prettier": "^2.4.1",
@@ -118,9 +118,9 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "~5.5.2",
-    "sanitize-html": "^2.5.2",
+    "sanitize-html": "^2.5.3",
     "sass": "~1.43.4",
-    "simple-icons": "~5.21.1",
+    "simple-icons": "~5.22.0",
     "stylelint": "~14.0.1",
     "stylelint-config-idiomatic-order": "~8.1.0",
     "stylelint-config-prettier": "~9.0.3",
@@ -128,7 +128,7 @@
     "stylelint-config-standard": "~23.0.0",
     "stylelint-order": "~5.0.0",
     "stylelint-semantic-groups": "~1.1.1",
-    "svgstore": "^3.0.0-2",
+    "svgstore": "^3.0.1",
     "to-vfile": "^7.2.2",
     "truncate-html": "^1.0.4",
     "twitter": "^1.7.1",
@@ -154,7 +154,7 @@
     "cheerio": "*",
     "clean-css": "^5.2.2",
     "eleventy-plugin-toc": "^1.1.5",
-    "eslint": "8.1.0",
+    "eslint": "8.2.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "esm": "^3.2.25",
