--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "check-links": "npx check-html-links _site"
   },
   "devDependencies": {
-    "@11ty/eleventy": "1.0.0-beta.8",
+    "@11ty/eleventy": "1.0.0-canary.48 ",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
@@ -65,7 +65,7 @@
     "bent": "^7.3.12",
     "citation-js": "^0.5.4",
     "core-js": "^3.20",
-    "cssnano": "5.0.13",
+    "cssnano": "5.0.14",
     "debug": "^4.3.3",
     "deepmerge": "^4.2.2",
     "dotenv": "^10.0.0",
@@ -79,6 +79,7 @@
     "eleventy-plugin-youtube-embed": "1.6.5",
     "encoding": "^0.1.13",
     "entities": "^3.0.1",
+     "esm": "^3.2.25",
     "fast-glob": "^3.2.7",
     "fast-memoize": "^2.5.2",
     "feather-icons": "^4.28.0",
@@ -119,9 +120,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "~5.5.2",
     "sanitize-html": "^2.6.1",
-    "sass": "~1.45.0",
-    "simple-icons": "~6.2.0",
-    "stylelint": "~14.1.0",
+    "sass": "~1.45.1",
+    "simple-icons": "~6.3.0",
+    "stylelint": "~14.2.0",
     "stylelint-config-idiomatic-order": "~8.1.0",
     "stylelint-config-prettier": "~9.0.3",
     "stylelint-config-sass-guidelines": "~9.0.1",
@@ -145,7 +146,10 @@
     "workbox-strategies": "6.4.2"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=17"
+  },
+    "esm": {
+    "mode":"all"
   },
   "private": true,
   "dependencies": {
@@ -154,7 +158,7 @@
     "cheerio": "*",
     "clean-css": "^5.2.2",
     "eleventy-plugin-toc": "^1.1.5",
-    "eslint": "8.4.1",
+    "eslint": "8.5.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "esm": "^3.2.25",
