--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "check-links": "npx check-html-links _site"
   },
   "devDependencies": {
-    "@11ty/eleventy": "1.0.0-canary.48 ",
+    "@11ty/eleventy": "1.0.0-canary.49",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
@@ -79,7 +79,7 @@
     "eleventy-plugin-youtube-embed": "1.6.5",
     "encoding": "^0.1.13",
     "entities": "^3.0.1",
-     "esm": "^3.2.25",
+    "esm": "^3.2.25",
     "fast-glob": "^3.2.7",
     "fast-memoize": "^2.5.2",
     "feather-icons": "^4.28.0",
@@ -148,8 +148,8 @@
   "engines": {
     "node": ">=17"
   },
-    "esm": {
-    "mode":"all"
+  "esm": {
+    "mode": "all"
   },
   "private": true,
   "dependencies": {
@@ -162,6 +162,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "esm": "^3.2.25",
+    "markdown-it-html5-media": "^0.7.0",
     "minimize": "^2.2.0",
     "purgecss": "^4.1.3",
     "rehype": "^12.0.0",
