--- a/package.json
+++ b/package.json
@@ -48,22 +48,22 @@
     "check-links": "npx check-html-links _site"
   },
   "devDependencies": {
-    "@11ty/eleventy": "1.0.0-canary.49",
+    "@11ty/eleventy": "1.0.0-beta.10",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
     "@rollup/plugin-babel": "^5.3",
     "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.1",
-    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-node-resolve": "^13.1.2",
+    "@rollup/plugin-replace": "^3.0.1",
     "@sindresorhus/slugify": "1.1.0",
     "approx-string-match": "^1.1.0",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.1",
     "babel-loader": "^8.2.3",
     "bent": "^7.3.12",
-    "citation-js": "^0.5.4",
+    "citation-js": "^0.5.5",
     "core-js": "^3.20",
     "cssnano": "5.0.14",
     "debug": "^4.3.3",
@@ -93,7 +93,7 @@
     "markdown-it": "~12.3",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "8.4.1",
-    "markdown-it-attrs": "^4.1.1",
+    "markdown-it-attrs": "^4.1.3",
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^3.0.0",
     "markdown-it-footnote": "^3.0.3",
@@ -114,14 +114,14 @@
     "request": "^2.88.2",
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.61.1",
+    "rollup": "^2.63.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "~5.5.2",
     "sanitize-html": "^2.6.1",
-    "sass": "~1.45.1",
-    "simple-icons": "~6.3.0",
+    "sass": "~1.45.2",
+    "simple-icons": "~6.5.0",
     "stylelint": "~14.2.0",
     "stylelint-config-idiomatic-order": "~8.1.0",
     "stylelint-config-prettier": "~9.0.3",
@@ -130,7 +130,7 @@
     "stylelint-order": "~5.0.0",
     "stylelint-semantic-groups": "~1.1.1",
     "svgstore": "^3.0.1",
-    "to-vfile": "^7.2.2",
+    "to-vfile": "^7.2.3",
     "truncate-html": "^1.0.4",
     "twitter": "^1.7.1",
     "twitter-text": "^3.1.0",
@@ -153,12 +153,13 @@
   },
   "private": true,
   "dependencies": {
+    "@11ty/eleventy-upgrade-help": "^1.0.1",
     "bib2json": "^0.0.1",
     "check-html-links": "^0.2.3",
     "cheerio": "*",
     "clean-css": "^5.2.2",
     "eleventy-plugin-toc": "^1.1.5",
-    "eslint": "8.5.0",
+    "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "esm": "^3.2.25",
@@ -168,7 +169,7 @@
     "rehype": "^12.0.0",
     "rehype-add-classes": "^1.0.0",
     "rehype-format": "^4.0.1",
-    "rehype-slug": "^5.0.0",
+    "rehype-slug": "^5.0.1",
     "rollup-plugin-entrypoint-hashmanifest": "github:balloob/rollup-plugin-entrypoint-hashmanifest#patch-1",
     "selenium-webdriver": "*"
   }
