--- a/package.json
+++ b/package.json
@@ -48,29 +48,29 @@
     "check-links": "npx check-html-links _site"
   },
   "devDependencies": {
-    "@11ty/eleventy": "1.0.0-beta.10",
+    "@11ty/eleventy": "1.0.0",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "@rollup/plugin-babel": "^5.3",
     "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
     "@sindresorhus/slugify": "1.1.0",
     "approx-string-match": "^1.1.0",
-    "autoprefixer": "^10.4.1",
+    "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "bent": "^7.3.12",
     "citation-js": "^0.5.5",
     "core-js": "^3.20",
-    "cssnano": "5.0.14",
+    "cssnano": "5.0.15",
     "debug": "^4.3.3",
     "deepmerge": "^4.2.2",
     "dotenv": "^10.0.0",
     "element-remove": "^1.0.4",
-    "eleventy-plugin-embed-everything": "^1.13.3",
+    "eleventy-plugin-embed-everything": "^1.14.0",
     "eleventy-plugin-embed-tweet": "^0.3.1",
     "eleventy-plugin-images-responsiver": "^1.9.1",
     "eleventy-plugin-link_to": "^0.4.0",
@@ -80,12 +80,12 @@
     "encoding": "^0.1.13",
     "entities": "^3.0.1",
     "esm": "^3.2.25",
-    "fast-glob": "^3.2.7",
+    "fast-glob": "^3.2.10",
     "fast-memoize": "^2.5.2",
     "feather-icons": "^4.28.0",
     "flat-cache": "^3.0.4",
     "html-minifier": "^4.0.0",
-    "image-size": "^1.0.0",
+    "image-size": "^1.0.1",
     "linkedom": "^0.13.0",
     "linkify-urls": "^3.1.1",
     "lodash": "^4.17.21",
@@ -120,8 +120,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "~5.5.2",
     "sanitize-html": "^2.6.1",
-    "sass": "~1.45.2",
-    "simple-icons": "~6.5.0",
+    "sass": "~1.47.0",
+    "simple-icons": "~6.6.0",
     "stylelint": "~14.2.0",
     "stylelint-config-idiomatic-order": "~8.1.0",
     "stylelint-config-prettier": "~9.0.3",
