--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "check-links": "npx check-html-links _site"
   },
   "devDependencies": {
-    "@11ty/eleventy": "1.0.0",
+    "@11ty/eleventy": "1.0.1-canary.3",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
@@ -65,7 +65,7 @@
     "bent": "^7.3.12",
     "citation-js": "^0.5.6",
     "core-js": "^3.21",
-    "cssnano": "5.0.17",
+    "cssnano": "5.1.0",
     "debug": "^4.3.3",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.0",
@@ -86,7 +86,7 @@
     "flat-cache": "^3.0.4",
     "html-minifier": "^4.0.0",
     "image-size": "^1.0.1",
-    "linkedom": "^0.14.2",
+    "linkedom": "^0.14.3",
     "linkify-urls": "^3.1.1",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
@@ -102,7 +102,7 @@
     "modern-css-reset": "^1.4.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
-    "node-fetch": "^3.2.0",
+    "node-fetch": "^3.2.1",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "postcss-cli": "^9.1.0",
@@ -114,29 +114,29 @@
     "request": "^2.88.2",
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.68.0",
+    "rollup": "^2.69.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "~5.6.0",
     "sanitize-html": "^2.7.0",
     "sass": "~1.49.9",
-    "simple-icons": "~6.11.0",
+    "simple-icons": "~6.13.0",
     "svgstore": "^3.0.1",
     "to-vfile": "^7.2.3",
-    "truncate-html": "^0.0.1",
+    "truncate-html": "^1.0.4",
     "twitter": "^1.7.1",
     "twitter-text": "^3.1.0",
-    "typeset": "^0.3.0",
+    "typeset": "^0.3.1",
     "vfile-reporter": "^7.0.3",
-    "workbox-broadcast-update": "6.5.0",
-    "workbox-cacheable-response": "6.5.0",
-    "workbox-cli": "^6.5.0",
-    "workbox-core": "6.5.0",
-    "workbox-expiration": "6.5.0",
-    "workbox-precaching": "6.5.0",
-    "workbox-routing": "6.5.0",
-    "workbox-strategies": "6.5.0"
+    "workbox-broadcast-update": "6.5.1",
+    "workbox-cacheable-response": "6.5.1",
+    "workbox-cli": "^6.5.1",
+    "workbox-core": "6.5.1",
+    "workbox-expiration": "6.5.1",
+    "workbox-precaching": "6.5.1",
+    "workbox-routing": "6.5.1",
+    "workbox-strategies": "6.5.1"
   },
   "engines": {
     "node": ">=17"
@@ -153,7 +153,7 @@
     "clean-css": "^5.2.4",
     "eleventy-plugin-toc": "^1.1.5",
     "eslint": "8.10.0",
-    "eslint-config-prettier": "8.4.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
     "esm": "^3.2.25",
     "markdown-it-html5-media": "^0.7.1",
