--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tweets": "node ./_scripts/send-tweets.js",
     "sprite": "node ./_scripts/generate-svg-sprite.js",
     "plum": "node ./_scripts/plum.js",
+    "scholar": "node ./_scripts/scholar.js",
     "people": "node ./_scripts/updateAuthors.js",
     "bib": "(cd BIB; ./updatebib.sh)",
     "update": "npm-run-all start0 bib sprite webmention",
@@ -46,8 +47,9 @@
     "lint:sass": "stylelint 'assets/**/*.scss'",
     "fix:sass": "stylelint --fix 'assets/**/*.scss'",
     "check-links": "npx check-html-links _site",
-    "sleep": "sleep 920",
-    "updatetweets": " npm-run-all --sequential build sleep build sleep build sleep"
+    "sleep": "sleep 800",
+     "sleepshort": "sleep 120",
+    "updatetweets": " npm-run-all --sequential build sleepshort build sleep build sleepshort build"
   },
   "devDependencies": {
     "@11ty/eleventy": "2.0.0-canary.16",
@@ -163,6 +165,7 @@
     "rehype-format": "^4.0.1",
     "rehype-slug": "^5.0.1",
     "rollup-plugin-entrypoint-hashmanifest": "github:balloob/rollup-plugin-entrypoint-hashmanifest#patch-1",
+    "selenium-stealth": "^1.0.1",
     "selenium-webdriver": "*"
   }
 }
