--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "postcss": "postcss _site/css/*.css --no-map --replace",
     "build:sass": "npm-run-all --sequential sass postcss",
     "watch:sass": "sass --source-map-urls=absolute --watch assets/sass:_site/css",
-    "build:js": "rollup -c",
-    "watch:js": "rollup -c --watch",
+    "build:js": "esbuild assets/js/additional.js --format=esm --bundle --splitting=true --sourcemap --outdir=_site/js --minify=true",
+    "start:js": "esbuild assets/js/additional.js --format=esm --bundle --splitting=true --sourcemap --outdir=_site/js --watch --sourcemap=inline",
+    "build:js:legacy": "NODE_ENV=production webpack --progress",
+    "start:js:legacy": "NODE_ENV=development webpack --progress -w",
     "build:eleventy": "NODE_OPTIONS='-r esm' eleventy",
     "watch:eleventy": "NODE_OPTIONS='-r esm' eleventy --serve",
     "serviceworker:inject": "workbox generateSW workbox.config.js",
-    "start": " NODE_ENV=development npm-run-all  --sequential clean build:js --parallel watch:*",
-    "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel build:js build:sass --sequential build:eleventy ",
-    "startsup": " NODE_ENV=production npm-run-all  --sequential clean --parallel build:js build:sass serviceworker:inject --parallel watch:*",
+    "start": " NODE_ENV=development npm-run-all  --sequential clean build:js  build:js:legacy --parallel watch:*",
+    "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel start:js build:sass --sequential build:eleventy ",
     "start:debug": "DEBUG=Eleventy* npm start",
-    "build": " NODE_ENV=production npm-run-all --sequential clean --parallel  build:js build:sass --sequential build:eleventy serviceworker:inject",
+    "build": " NODE_ENV=production npm-run-all --sequential clean --parallel  build:js build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
     "build:debug": "DEBUG=Eleventy* npm run build",
     "build:benchmark": "DEBUG=Eleventy:Benchmark* npm run build",
-    "build:netlify": " NODE_ENV=production npm-run-all --sequential clean --parallel build:js build:sass --sequential build:eleventy serviceworker:inject",
+    "build:netlify": " NODE_ENV=production npm-run-all --sequential clean --parallel build:js  build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
     "webmention": "node ./_scripts/update-webmention.js",
     "likes": "node ./_scripts/twitterLikes.js",
     "rglikes": "node ./_scripts/researchgatesLikes.js",
@@ -44,8 +45,6 @@
     "bib": "(cd BIB; ./updatebib.sh)",
     "update": "npm-run-all start0 bib sprite webmention",
     "updateall": "npm-run-all start0 bib sprite webmention plum start0  rglikes likes  start0",
-    "lint:sass": "stylelint 'assets/**/*.scss'",
-    "fix:sass": "stylelint --fix 'assets/**/*.scss'",
     "check-links": "npx check-html-links _site",
     "sleep": "sleep 800",
     "sleepshort": "sleep 120",
@@ -58,10 +57,6 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
-    "@rollup/plugin-babel": "^6.0",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-replace": "^5.0.4",
     "@sindresorhus/slugify": "1.1.2",
     "approx-string-match": "^1.1.0",
     "autoprefixer": "^10.4.16",
@@ -83,6 +78,7 @@
     "eleventy-plugin-youtube-embed": "1.9.1",
     "encoding": "^0.1.13",
     "entities": "^4.5.0",
+    "esbuild": "^0.19.5",
     "esm": "^3.2.25",
     "fast-glob": "^3.3.1",
     "fast-memoize": "^2.5.2",
@@ -90,7 +86,7 @@
     "flat-cache": "^3.1.1",
     "html-minifier": "^4.0.0",
     "image-size": "^1.0.2",
-    "linkedom": "^0.15.6",
+    "linkedom": "^0.16.1",
     "linkify-urls": "^3.1.1",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
@@ -118,14 +114,9 @@
     "request": "^2.88.2",
     "require-dir": "^1.2.0",
     "rimraf": "^5.0.5",
-    "rollup": "^2.79.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-visualizer": "~5.9.2",
     "sanitize-html": "^2.11.0",
-    "sass": "~1.69.3",
-    "simple-icons": "~9.18.0",
+    "sass": "~1.69.5",
+    "simple-icons": "~9.19.0",
     "svgstore": "^3.0.1",
     "to-vfile": "^8.0.0",
     "truncate-html": "^1.0.4",
@@ -133,6 +124,8 @@
     "twitter-text": "^3.1.0",
     "typeset": "^0.3.4",
     "vfile-reporter": "^8.1.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
     "workbox-broadcast-update": "7.0.0",
     "workbox-cacheable-response": "7.0.0",
     "workbox-cli": "^7.0.0",
@@ -164,7 +157,6 @@
     "rehype-add-classes": "^1.0.0",
     "rehype-format": "^5.0.0",
     "rehype-slug": "^6.0.0",
-    "rollup-plugin-entrypoint-hashmanifest": "github:balloob/rollup-plugin-entrypoint-hashmanifest#patch-1",
     "selenium-stealth": "^1.0.1",
     "selenium-webdriver": "*"
   }
