--- a/package.json
+++ b/package.json
@@ -28,11 +28,8 @@
     "watch:eleventy": "NODE_OPTIONS='-r esm' eleventy --serve",
     "serviceworker:inject": "workbox generateSW workbox.config.js",
     "start": " NODE_ENV=development npm-run-all  --sequential clean build:js  build:js:legacy --parallel watch:*",
-    "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel start:js build:sass --sequential build:eleventy ",
-    "start:debug": "DEBUG=Eleventy* npm start",
+    "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel start:js start:js:legacy build:sass --sequential build:eleventy ",
     "build": " NODE_ENV=production npm-run-all --sequential clean --parallel  build:js build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
-    "build:debug": "DEBUG=Eleventy* npm run build",
-    "build:benchmark": "DEBUG=Eleventy:Benchmark* npm run build",
     "build:netlify": " NODE_ENV=production npm-run-all --sequential clean --parallel build:js  build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
     "webmention": "node ./_scripts/update-webmention.js",
     "likes": "node ./_scripts/twitterLikes.js",
@@ -45,11 +42,13 @@
     "bib": "(cd BIB; ./updatebib.sh)",
     "update": "npm-run-all start0 bib sprite webmention",
     "updateall": "npm-run-all start0 bib sprite webmention plum start0  rglikes likes  start0",
-    "check-links": "npx check-html-links _site",
     "sleep": "sleep 800",
     "sleepshort": "sleep 120",
-    "updatetweets": " npm-run-all --sequential build sleepshort build sleep build sleepshort build"
-  },
+    "updatetweets": " npm-run-all --sequential build sleepshort build sleep build sleepshort build",
+      "build:debug": "DEBUG=Eleventy* npm run build",
+          "build:benchmark": "DEBUG=Eleventy:Benchmark* npm run build",
+          "start:debug": "DEBUG=Eleventy* npm start"
+},
   "devDependencies": {
     "@11ty/eleventy": "2.0.0-canary.18",
     "@11ty/eleventy-navigation": "^0.3.5",
@@ -143,9 +142,7 @@
   },
   "private": true,
   "dependencies": {
-    "@11ty/eleventy-upgrade-help": "^2.0.5",
     "bib2json": "^0.0.1",
-    "check-html-links": "^0.2.4",
     "cheerio": "*",
     "clean-css": "^5.3.2",
     "eleventy-plugin-toc": "^1.1.5",
