--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "sleep": "sleep 800",
     "sleepshort": "sleep 120",
     "updatetweets": " npm-run-all --sequential build sleepshort build sleep build sleepshort build",
-      "build:debug": "DEBUG=Eleventy* npm run build",
-          "build:benchmark": "DEBUG=Eleventy:Benchmark* npm run build",
-          "start:debug": "DEBUG=Eleventy* npm start"
-},
+    "build:debug": "DEBUG=Eleventy* npm run build",
+    "build:benchmark": "DEBUG=Eleventy:Benchmark* npm run build",
+    "start:debug": "DEBUG=Eleventy* npm start"
+  },
   "devDependencies": {
     "@11ty/eleventy": "2.0.0-canary.18",
     "@11ty/eleventy-navigation": "^0.3.5",
@@ -75,7 +75,7 @@
     "eleventy-plugin-nesting-toc": "github:mmontevil/eleventy-plugin-nesting-toc",
     "eleventy-plugin-reading-time": "^0.0.1",
     "eleventy-plugin-youtube-embed": "1.9.1",
-   "encoding": "^0.1.13",
+    "encoding": "^0.1.13",
     "entities": "^4.5.0",
     "esbuild": "^0.20.1",
     "esm": "^3.2.25",
@@ -143,6 +143,7 @@
   "private": true,
   "dependencies": {
     "bib2json": "^0.0.1",
+    "caniuse-lite": "^1.0.30001632",
     "cheerio": "*",
     "clean-css": "^5.3.2",
     "eleventy-plugin-toc": "^1.1.5",
