--- a/package.json
+++ b/package.json
@@ -148,6 +148,8 @@
     "clean-css": "^5.3.2",
     "eleventy-plugin-toc": "^1.1.5",
     "esm": "^3.2.25",
+    "linkify-string": "^4.1.3",
+    "linkifyjs": "^4.1.3",
     "markdown-it-html5-media": "^0.7.1",
     "minimize": "^2.2.0",
     "purgecss": "^5.0.0",
@@ -156,6 +158,7 @@
     "rehype-format": "^5.0.0",
     "rehype-slug": "^6.0.0",
     "selenium-stealth": "^1.0.1",
-    "selenium-webdriver": "*"
+    "selenium-webdriver": "*",
+    "solid-links": "^0.3.4"
   }
 }
