--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "start:js": "esbuild assets/js/additional.js --format=esm --bundle --splitting=true --sourcemap --outdir=_site/js --watch --sourcemap=inline",
     "build:js:legacy": "NODE_ENV=production webpack --progress",
     "start:js:legacy": "NODE_ENV=development webpack --progress -w",
-    "build:eleventy": "NODE_OPTIONS='-r esm' eleventy",
-    "watch:eleventy": "NODE_OPTIONS='-r esm' eleventy --serve",
+    "build:eleventy": " eleventy",
+    "watch:eleventy": " eleventy --serve",
     "serviceworker:inject": "workbox generateSW workbox.config.js",
     "start": " NODE_ENV=development npm-run-all  --sequential clean build:js  build:js:legacy --parallel watch:*",
     "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel start:js start:js:legacy build:sass --sequential build:eleventy ",
@@ -50,49 +50,48 @@
     "start:debug": "DEBUG=Eleventy* npm start"
   },
   "devDependencies": {
-    "@11ty/eleventy": "2.0.0-canary.18",
+    "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-navigation": "^0.3.5",
-    "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@11ty/eleventy-plugin-rss": "^1.1.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
     "@sindresorhus/slugify": "1.1.2",
     "approx-string-match": "^1.1.0",
-    "autoprefixer": "^10.4.16",
-    "babel-loader": "^9.1.3",
+    "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "bent": "^7.3.12",
-    "citation-js": "^0.7.1",
-    "core-js": "^3.33",
-    "cssnano": "6.0.1",
-    "debug": "^4.3.4",
+    "citation-js": "^0.7.15",
+    "core-js": "^3.38",
+    "cssnano": "7.0.6",
+    "debug": "^4.3.7",
     "deepmerge": "^4.3.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "element-remove": "^1.0.4",
-    "eleventy-plugin-embed-everything": "^1.17.0",
+    "eleventy-plugin-embed-everything": "^1.19.0",
     "eleventy-plugin-embed-tweet": "^0.3.3",
     "eleventy-plugin-images-responsiver": "^2.2.0",
     "eleventy-plugin-link_to": "^0.4.1",
     "eleventy-plugin-nesting-toc": "github:mmontevil/eleventy-plugin-nesting-toc",
     "eleventy-plugin-reading-time": "^0.0.1",
-    "eleventy-plugin-youtube-embed": "1.9.1",
+    "eleventy-plugin-youtube-embed": "1.11.0",
     "encoding": "^0.1.13",
-    "entities": "^4.5.0",
-    "esbuild": "^0.20.1",
+    "entities": "^5.0.0",
+    "esbuild": "^0.23.1",
     "esm": "^3.2.25",
     "fast-glob": "^3.3.2",
     "fast-memoize": "^2.5.2",
-    "feather-icons": "^4.29.1",
-    "flat-cache": "^4.0.1",
+    "feather-icons": "^4.29.2",
+    "flat-cache": "^5.0.0",
     "html-minifier": "^4.0.0",
     "image-size": "^1.1.1",
-    "linkedom": "^0.16.8",
-    "linkify-urls": "^3.1.1",
+    "linkedom": "0.18.5",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
-    "markdown-it": "~14.0",
+    "markdown-it": "~14.1",
     "markdown-it-abbr": "^2.0.0",
-    "markdown-it-anchor": "8.6.7",
-    "markdown-it-attrs": "^4.1.6",
+    "markdown-it-anchor": "9.2.0",
+    "markdown-it-attrs": "^4.2.0",
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^4.0.0",
     "markdown-it-footnote": "^4.0.0",
@@ -101,64 +100,59 @@
     "modern-css-reset": "^1.4.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "postcss-cli": "^10.1.0",
+    "postcss-cli": "^11.0.0",
     "postcss-hash": "^3.0.0",
     "postcss-var-optimize": "^8.1.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.3.3",
     "prettier-stylelint": "~0.4.2",
     "replaceall": "^0.1.6",
     "request": "^2.88.2",
     "require-dir": "^1.2.0",
-    "rimraf": "^5.0.5",
-    "sanitize-html": "^2.11.0",
-    "sass": "~1.69.5",
-    "simple-icons": "~9.19.0",
+    "rimraf": "^6.0.1",
+    "sanitize-html": "^2.13.0",
+    "sass": "~1.79.3",
+    "simple-icons": "~13.10.0",
     "svgstore": "^3.0.1",
     "to-vfile": "^8.0.0",
-    "truncate-html": "^1.0.4",
+    "truncate-html": "^1.1.2",
     "twitter": "^1.7.1",
     "twitter-text": "^3.1.0",
     "typeset": "^0.3.4",
-    "vfile-reporter": "^8.1.0",
-    "webpack": "^5.90.3",
+    "vfile-reporter": "^8.1.1",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "workbox-broadcast-update": "7.0.0",
-    "workbox-cacheable-response": "7.0.0",
-    "workbox-cli": "^7.0.0",
-    "workbox-core": "7.0.0",
-    "workbox-expiration": "7.0.0",
-    "workbox-precaching": "7.0.0",
-    "workbox-routing": "7.0.0",
-    "workbox-strategies": "7.0.0"
+    "workbox-broadcast-update": "7.1.0",
+    "workbox-cacheable-response": "7.1.0",
+    "workbox-cli": "^7.1.0",
+    "workbox-core": "7.1.0",
+    "workbox-expiration": "7.1.0",
+    "workbox-precaching": "7.1.0",
+    "workbox-routing": "7.1.0",
+    "workbox-strategies": "7.1.0"
   },
   "engines": {
     "node": ">=20"
   },
-  "esm": {
-    "mode": "all"
-  },
   "private": true,
   "dependencies": {
     "bib2json": "^0.0.1",
-    "caniuse-lite": "^1.0.30001632",
+    "caniuse-lite": "^1.0.30001662",
     "cheerio": "*",
-    "clean-css": "^5.3.2",
+    "clean-css": "^5.3.3",
     "eleventy-plugin-toc": "^1.1.5",
-    "esm": "^3.2.25",
     "linkify-string": "^4.1.3",
     "linkifyjs": "^4.1.3",
     "markdown-it-html5-media": "^0.7.1",
     "minimize": "^2.2.0",
-    "purgecss": "^5.0.0",
+    "purgecss": "^6.0.0",
     "rehype": "^13.0.1",
     "rehype-add-classes": "^1.0.0",
-    "rehype-format": "^5.0.0",
+    "rehype-format": "^5.0.1",
     "rehype-slug": "^6.0.0",
     "selenium-stealth": "^1.0.1",
-    "selenium-webdriver": "*",
-    "solid-links": "^0.3.4"
+    "selenium-webdriver": "*"
   }
 }
