--- a/package.json
+++ b/package.json
@@ -52,17 +52,14 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@sindresorhus/slugify": "1.1.2",
-    "approx-string-match": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
-    "bent": "^7.3.12",
     "citation-js": "^0.7.16",
     "core-js": "^3.38",
     "cssnano": "7.0.6",
     "debug": "^4.3.7",
     "deepmerge": "^4.3.1",
     "dotenv": "^16.4.5",
-    "element-remove": "^1.0.4",
     "eleventy-plugin-embed-everything": "^1.19.0",
     "eleventy-plugin-images-responsiver": "^3.0.0",
     "eleventy-plugin-link_to": "^0.4.1",
@@ -72,7 +69,6 @@
     "encoding": "^0.1.13",
     "entities": "^5.0.0",
     "esbuild": "^0.24.0",
-    "esm": "^3.2.25",
     "fast-glob": "^3.3.2",
     "fast-memoize": "^2.5.2",
     "feather-icons": "^4.29.2",
@@ -95,7 +91,6 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "node-fetch": "^3.3.2",
-    "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "postcss-cli": "^11.0.0",
     "postcss-hash": "^3.0.0",
@@ -108,13 +103,10 @@
     "rimraf": "^6.0.1",
     "sanitize-html": "^2.13.1",
     "sass": "~1.80.4",
-    "simple-icons": "~13.14.1",
+    "simple-icons": "~13.15.0",
     "svgstore": "^3.0.1",
     "to-vfile": "^8.0.0",
     "truncate-html": "^1.1.2",
-    "twitter": "^1.7.1",
-    "twitter-text": "^3.1.0",
-    "typeset": "^0.3.4",
     "vfile-reporter": "^8.1.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
@@ -125,7 +117,14 @@
     "workbox-expiration": "7.1.0",
     "workbox-precaching": "7.1.0",
     "workbox-routing": "7.1.0",
-    "workbox-strategies": "7.1.0"
+    "workbox-strategies": "7.1.0",
+    "string-similarity": "^4.0.4",
+    "purgecss": "^6.0.0",
+    "clean-css": "^5.3.3",
+    "eleventy-plugin-toc": "^1.1.5",
+    "linkify-string": "^4.1.3",
+    "linkifyjs": "^4.1.3",
+    "markdown-it-html5-media": "^0.7.1"
   },
   "engines": {
     "node": ">=20"
@@ -133,20 +132,14 @@
   "private": true,
   "dependencies": {
     "bib2json": "^0.0.1",
-    "caniuse-lite": "^1.0.30001671",
+    "caniuse-lite": "^1.0.30001673",
     "cheerio": "*",
-    "clean-css": "^5.3.3",
-    "eleventy-plugin-toc": "^1.1.5",
-    "linkify-string": "^4.1.3",
-    "linkifyjs": "^4.1.3",
-    "markdown-it-html5-media": "^0.7.1",
-    "minimize": "^2.2.0",
-    "purgecss": "^6.0.0",
     "rehype": "^13.0.2",
     "rehype-add-classes": "^1.0.0",
     "rehype-format": "^5.0.1",
     "rehype-slug": "^6.0.0",
     "selenium-stealth": "^1.0.1",
-    "selenium-webdriver": "*"
+    "selenium-webdriver": "*",
+        "npm-run-all": "^4.1.5"
   }
 }
