--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "sleepshort": "sleep 120",
     "build:debug": "DEBUG=Eleventy* npm run build",
     "build:benchmark": "DEBUG=Eleventy:Benchmark* npm run build",
-    "start:debug": "DEBUG=Eleventy* npm start"
+    "start:debug": "DEBUG=Eleventy* npm start",
+    "c8build": "c8 npm run build && c8 --reporter=html report"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
@@ -55,6 +56,7 @@
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "citation-js": "^0.7.16",
+    "clean-css": "^5.3.3",
     "core-js": "^3.38",
     "cssnano": "7.0.6",
     "debug": "^4.3.7",
@@ -65,8 +67,8 @@
     "eleventy-plugin-link_to": "^0.4.1",
     "eleventy-plugin-nesting-toc": "github:mmontevil/eleventy-plugin-nesting-toc",
     "eleventy-plugin-reading-time": "^0.0.1",
+    "eleventy-plugin-toc": "^1.1.5",
     "eleventy-plugin-youtube-embed": "1.11.0",
-    "encoding": "^0.1.13",
     "entities": "^5.0.0",
     "esbuild": "^0.24.0",
     "fast-glob": "^3.3.2",
@@ -76,6 +78,8 @@
     "html-minifier": "^4.0.0",
     "image-size": "^1.1.1",
     "linkedom": "0.18.5",
+    "linkify-string": "^4.1.3",
+    "linkifyjs": "^4.1.3",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "markdown-it": "~14.1",
@@ -85,6 +89,7 @@
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^4.0.0",
     "markdown-it-footnote": "^4.0.0",
+    "markdown-it-html5-media": "^0.7.1",
     "markdown-it-plain-text": "^0.3.0",
     "mathjax-full": "3.2.2",
     "modern-css-reset": "^1.4.0",
@@ -97,6 +102,7 @@
     "postcss-var-optimize": "^8.1.0",
     "prettier": "^3.3.3",
     "prettier-stylelint": "~0.4.2",
+    "purgecss": "^6.0.0",
     "replaceall": "^0.1.6",
     "request": "^2.88.2",
     "require-dir": "^1.2.0",
@@ -104,6 +110,7 @@
     "sanitize-html": "^2.13.1",
     "sass": "~1.80.4",
     "simple-icons": "~13.15.0",
+    "string-similarity": "^4.0.4",
     "svgstore": "^3.0.1",
     "to-vfile": "^8.0.0",
     "truncate-html": "^1.1.2",
@@ -117,14 +124,7 @@
     "workbox-expiration": "7.1.0",
     "workbox-precaching": "7.1.0",
     "workbox-routing": "7.1.0",
-    "workbox-strategies": "7.1.0",
-    "string-similarity": "^4.0.4",
-    "purgecss": "^6.0.0",
-    "clean-css": "^5.3.3",
-    "eleventy-plugin-toc": "^1.1.5",
-    "linkify-string": "^4.1.3",
-    "linkifyjs": "^4.1.3",
-    "markdown-it-html5-media": "^0.7.1"
+    "workbox-strategies": "7.1.0"
   },
   "engines": {
     "node": ">=20"
@@ -134,12 +134,14 @@
     "bib2json": "^0.0.1",
     "caniuse-lite": "^1.0.30001673",
     "cheerio": "*",
+    "eleventy-plugin-typeset": "^1.0.0",
+    "npm-check": "^6.0.1",
+    "npm-run-all": "^4.1.5",
     "rehype": "^13.0.2",
     "rehype-add-classes": "^1.0.0",
     "rehype-format": "^5.0.1",
     "rehype-slug": "^6.0.0",
     "selenium-stealth": "^1.0.1",
-    "selenium-webdriver": "*",
-        "npm-run-all": "^4.1.5"
+    "selenium-webdriver": "*"
   }
 }
