--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "montevil.org",
   "version": "4.0.1",
+  "type": "module",
   "title": "Maël Montévil, research in theoretical biology",
   "description": "This is the personnal website of Maël Montévil.",
   "author": {
@@ -26,7 +27,7 @@
     "start:js:legacy": "NODE_ENV=development webpack --progress -w",
     "build:eleventy": " eleventy",
     "watch:eleventy": " eleventy --serve ",
-    "serviceworker:inject": "workbox generateSW workbox.config.js",
+    "serviceworker:inject": "workbox generateSW workbox.config.cjs",
     "start": " NODE_ENV=development npm-run-all  --sequential clean build:js  build:js:legacy --parallel watch:*",
     "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel start:js start:js:legacy build:sass --sequential build:eleventy ",
     "build": " NODE_ENV=production npm-run-all --sequential clean --parallel  build:js build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
@@ -50,7 +51,7 @@
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@sindresorhus/slugify": "3.0.0",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
     "babel-loader": "^10.0.0",
     "citation-js": "^0.7.21",
@@ -72,7 +73,7 @@
     "fast-memoize": "^2.5.2",
     "feather-icons": "^4.29.2",
     "flat-cache": "^6.1.19",
-    "html-minifier": "^4.0.0",
+    "html-minifier-next": "^4.9.2",
     "image-size": "^1.1.2",
     "linkedom": "0.18.12",
     "linkify-string": "^4.3.2",
