--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "build:eleventy": " eleventy",
     "watch:eleventy": " eleventy --serve ",
     "serviceworker:inject": "workbox generateSW workbox.config.cjs",
-    "start": " NODE_ENV=production npm-run-all  --sequential clean build:js  build:js:legacy --parallel watch:*",
+    "start": " NODE_ENV=development npm-run-all  --sequential clean build:js  build:js:legacy --parallel watch:*",
     "start0": " NODE_ENV=development npm-run-all --sequential clean --parallel start:js start:js:legacy build:sass --sequential build:eleventy ",
-    "build": " NODE_ENV=production npm-run-all --sequential clean --parallel  build:js build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
-    "build:netlify": " NODE_ENV=production npm-run-all --sequential clean --parallel build:js  build:js:legacy build:sass --sequential build:eleventy serviceworker:inject",
+    "build": " NODE_ENV=production npm-run-all --sequential clean --parallel  build:js build:js:legacy build:sass --sequential build:eleventy",
+    "build:netlify": " NODE_ENV=production npm-run-all --sequential clean --parallel build:js  build:js:legacy build:sass --sequential build:eleventy",
     "webmention": "node ./_scripts/update-webmention.cjs",
     "sprite": "node ./_scripts/generate-svg-sprite.js",
     "scholar": "node ./_scripts/scholar.js",
