--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "bib2json": "^0.0.1",
     "caniuse-lite": "^1.0.30001760",
     "cheerio": "*",
+    "memoize": "^10.2.0",
     "npm-check": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "patch-package": "^8.0.1",
